--- a/index.html
+++ b/index.html
@@ -1,14 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Personal Homepage</title>
+    <title>Naison Mutongoreya | WDD 130</title>
 </head>
-<body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
 
-    <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
+<body>
+    <HEAder></HEAder>
+    <NAV>
+        <a href="#">Home</a>
+        <a href="wwr/">Rafting Website</a>
+    </NAV>
+    <Main>
+        <h1>Naison Mutongoreya | WDD130</h1>
+        <img src="images/profile.jpg" alt="Naison Mutongoreya">
+        <p>My name is Naison Mutongoreya, and I am a motivated and goal-oriented individual with a passion for
+            business,
+            leadership, and continuous learning. I recently completed my studies in Business Administration and
+            Management at
+            Brigham Young University Idaho and am currently pursuing a diploma in Mining Engineering, as well as a
+            degree in
+            Software Development. I have experience working as a Data Specialist and Executive Secretary, where I
+            developed strong
+            organizational, communication, and problem-solving skills. I love learning new things, working with
+            people, and
+            exploring creative ideas. In my free time, I enjoy listening to music, exploring new places, and
+            spending time with
+            family. My long-term goal is to become a manager and contribute positively to the success of any
+            organization I work
+            with.</p>
+    </Main>
+    <FOOTer>
+        ©2025 🌴 Naison Mutongoreya 🌴 Bindura, Zimbabwe
+    </FOOTer>
 </body>
+
 </html>
