--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
 </head>
 
 <body>
-    <HEAder></HEAder>
-    <NAV>
-        <a href="#">Home</a>
-        <a href="wwr/">Rafting Website</a>
-    </NAV>
+    <HEAder>
+        <NAV>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting Website</a>
+        </NAV>
+    </HEAder>
     <Main>
         <h1>Naison Mutongoreya | WDD130</h1>
-        <img src="images/profile.jpg" alt="Naison Mutongoreya">
+        <img src="images/profile.jpg" alt="naison mutongoreya">
         <p>My name is Naison Mutongoreya, and I am a motivated and goal-oriented individual with a passion for
             business,
             leadership, and continuous learning. I recently completed my studies in Business Administration and
