--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </HEAder>
     <Main>
         <h1>Naison Mutongoreya | WDD130</h1>
-        <img src="images/profile.jpg" alt="naison mutongoreya">
+        <img src="images/profile.jpg" alt="Hello, my name is Naison Mutongoreya" width="200">
         <p>My name is Naison Mutongoreya, and I am a motivated and goal-oriented individual with a passion for
             business,
             leadership, and continuous learning. I recently completed my studies in Business Administration and
