--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 </head>
 
 <body>
-    <HEAder>
-        <NAV>
+    <header>
+        <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
-        </NAV>
-    </HEAder>
-    <Main>
+        </nav>
+    </header>
+    <main>
         <h1>Naison Mutongoreya | WDD130</h1>
-        <img src="images/profile.jpg" alt="Hello, my name is Naison Mutongoreya" width="200">
+        <img src="images/profile.jpg" alt="Naison Mutongoreya" width="200">
         <p>My name is Naison Mutongoreya, and I am a motivated and goal-oriented individual with a passion for
             business,
             leadership, and continuous learning. I recently completed my studies in Business Administration and
@@ -32,10 +32,10 @@
             family. My long-term goal is to become a manager and contribute positively to the success of any
             organization I work
             with.</p>
-    </Main>
-    <FOOTer>
+    </main>
+    <footer>
         ©2025 🌴 Naison Mutongoreya 🌴 Bindura, Zimbabwe
-    </FOOTer>
+    </footer>
 </body>
 
 </html>
