--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             with.</p>
     </main>
     <footer>
-        ©2025 🌴 Naison Mutongoreya 🌴 Bindura, Zimbabwe
+        <p>©2025 🌴 Naison Mutongoreya 🌴 Bindura, Zimbabwe</p>
     </footer>
 </body>
 
