--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Naison Mutongoreya | WDD 130</title>
+
+    <meta name="description"
+        content="Naison Mutongoreya's home page for WDD130. This page is for learning HTML, CSS, and web design principles.">
+    <meta name="author" content="Naison Mutongoreya">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
@@ -33,6 +38,13 @@
             organization I work
             with.</p>
     </main>
+    <aside>
+        <h2>Zimbabwe</h2>
+        <img src="images/zimbabwe-flag.jpg" alt="Zimbabwe Flag">
+        <p>Zimbabwe is a beautiful country located in Southern Africa, known for its diverse wildlife, Victoria
+            Falls,
+            and rich cultural history. Bindura, my hometown, is a center for agriculture and mining activities.</p>
+    </aside>
     <footer>
         <p>©2025 🌴 Naison Mutongoreya 🌴 Bindura, Zimbabwe</p>
     </footer>
