--- a/week02/temple.html
+++ b/week02/temple.html
@@ -36,7 +36,7 @@
         </section>
     </main>
     <footer>
-        <p>Temple Card - Naison Muongoreya</p>
+        <p>Temple Card - Naison Mutongoreya</p>
     </footer>
 </body>
 
