--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="description"
         content="White Water Rafting Adventures - Experience the thrill of rafting with our professional guides, fun trips, and unforgettable experiences.">
-    <meta name="" content="Naison Mutongoreya">
+    <meta name="author" content="Naison Mutongoreya">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>White Water Rafting | About Us</title>
     <link rel="stylesheet" href="styles/rafting.css">
