--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description"
         content="Naison Mutongoreya's home page for WDD130. This page is for learning HTML, CSS, and web design principles.">
     <meta name="author" content="Naison Mutongoreya">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
 <body>
