--- a/wwr/about.html
+++ b/wwr/about.html
@@ -43,20 +43,46 @@
         <!-- History Section -->
         <section>
             <h2>History</h2>
-            <p>
-                Established in 1998, our rafting company began with a small group of friends who loved the thrill of
-                whitewater
-                rivers.
-                Over the years, we've grown into a trusted adventure provider, welcoming thousands of guests to share
-                the journey
-                with us.
-            </p>
+            <div class="history-grid">
+                <p>
+                    Our rafting company started in 1998 with a small group of friends who loved the thrill of whitewater
+                    rivers.
+                    Our early adventures laid the foundation for what would become a thriving rafting community.
+                </p>
+                <img src="images/history.jpg" alt="Rafting History">
+                <p>
+                    Over the years, we've grown into a trusted adventure provider, welcoming thousands of guests to
+                    share the journey
+                    with us.
+                    Today, our team continues to bring excitement and safety to everyone on the river.
+            </div>
         </section>
 
         <!-- Adventure Awaits Section -->
-        <section>
+        <section class="adventure">
             <h2>Adventure Awaits You!</h2>
-            <!-- Images will be added in next assignment -->
+            <div> class="adventure-gallery">
+                <figure>
+                    <img src="images/los-dientes-del-diablo.jpg" alt="Los Dientes del Diablo">
+                    <figcaption>Los Dientes del Diablo</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/big-mallard.jpg" alt="Big Mallard">
+                    <figcaption>Big Mallard</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/half-day.jpg" alt="Half Day Adventure">
+                    <figcaption>Half Day Adventure</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/rapid-falls.jpg" alt="Rapid Falls">
+                    <figcaption>Rapid Falls</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/devils-canyon.jpg" alt="Devil's Canyon">
+                    <figcaption>Devil's Canyon</figcaption>
+                </figure>
+            </div>
         </section>
     </main>
 
