--- a/wwr/about.html
+++ b/wwr/about.html
@@ -61,10 +61,10 @@
         <!-- Adventure Awaits Section -->
         <section class="adventure">
             <h2>Adventure Awaits You!</h2>
-            <div> class="adventure-gallery">
+            <div class="adventure-gallery">
                 <figure>
-                    <img src="images/los-dientes-del-diablo.jpg" alt="Los Dientes del Diablo">
-                    <figcaption>Los Dientes del Diablo</figcaption>
+                    <img src="images/los-dientes.jpg" alt="Los Dientes del Diablo">
+                    <figcaption>Los Dientes</figcaption>
                 </figure>
                 <figure>
                     <img src="images/big-mallard.jpg" alt="Big Mallard">
