--- a/wwr/about.html
+++ b/wwr/about.html
@@ -29,6 +29,7 @@
             <img src="images/hero.jpg" alt="Rafting Adventure">
             <h1>White Water Rafting Adventures</h1>
             <article>
+                <h3>Our Mission</h3>
                 <img src="images/happy-client.jpeg" alt="Happy Client">
                 <p>
                     Our purpose is simple: to bring excitement, teamwork, and safe adventure to everyone who joins us on
