--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content=".">
+    <meta name="description" content="Naison Mutongoreya">
     <meta
         name="Contact White Water Rafting Adventures - Reach out to us for bookings, questions, and customer support. We're here to make your rafting trip unforgettable!"
         content="Naison Mutongoreya">
