--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -3,10 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Naison Mutongoreya">
-    <meta
-        name="Contact White Water Rafting Adventures - Reach out to us for bookings, questions, and customer support. We're here to make your rafting trip unforgettable!"
-        content="Naison Mutongoreya">
+    <meta name="description"
+        content="Contact White Water Rafting Adventures - Reach out to us for bookings, questions, and customer support. We're here to make your rafting trip unforgettable!">
+    <meta name="author" content="Naison Mutongoreya">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>White Water Rafting | Contact Us</title>
     <link rel="stylesheet" href="styles/rafting.css">
