--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -24,81 +24,81 @@
         </nav>
     </header>
     <main>
-        <main>
-            <h1>Contact Us</h1>
+        <h1>Contact Us</h1>
 
-            <!-- Company Info -->
-            <section class="company-info">
-                <h2>Our Office</h2>
-                <p><strong>Address:</strong> 45 Riverbend Road, Victoria Falls, Zimbabwe</p>
-                <p><strong>Phone:</strong> +263 78 158 6218 / +263 77 910 7812</p>
-                <p><strong>Email:</strong> info@whitewaterrafting.com</p>
+        <!-- Company Info and Map/Form Side by Side -->
+        <section class="company-info">
+            <h2>Our Office</h2>
+            <p><strong>Address:</strong> 45 Riverbend Road, Victoria Falls, Zimbabwe</p>
+            <p><strong>Phone:</strong> +263 78 158 6218 / +263 77 910 7812</p>
+            <p><strong>Email:</strong> info@whitewaterrafting.com</p>
 
-                <!-- Embedded Google Map -->
+            <div class="contact-section">
+                <!-- Google Map (LEFT) -->
                 <div class="map">
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3623.711727340522!2d25.8462!3d-17.9243!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1930a7cbdf09e6ef%3A0x9c86f64b2d7d6b8e!2sVictoria%20Falls!5e0!3m2!1sen!2szw!4v1693929393097!5m2!1sen!2szw"
-                        allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-                    </iframe>
+                        allowfullscreen="" loading="lazy"></iframe>
                 </div>
-            </section>
 
-            <!-- Employee Profiles -->
-            <section class="team">
-                <h2>Meet Our Team</h2>
-                <div class="employee-gallery">
-                    <figure>
-                        <img src="images/employee1.jpg" alt="Naison - Lead Guide">
-                        <figcaption>Naison Mutongoreya<br>Lead Guide</figcaption>
-                    </figure>
-                    <figure>
-                        <img src="images/employee2.jpg" alt="Millicent - Safety Officer">
-                        <figcaption>Millicent Chironde<br>Safety Officer</figcaption>
-                    </figure>
-                    <figure>
-                        <img src="images/employee3.jpg" alt="Bruce - Tour Manager">
-                        <figcaption>Bruce Muteve<br>Tour Manager</figcaption>
-                    </figure>
+                <!-- Contact Form (RIGHT) -->
+                <div class="contact-form">
+                    <h3>Send Us a Message</h3>
+                    <form>
+                        <label for="fullname">Full Name:</label>
+                        <input type="text" id="fullname" name="fullname" required>
+
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" name="email" required>
+
+                        <fieldset>
+                            <legend>Purpose of Message:</legend>
+                            <label><input type="radio" name="purpose" value="general" required> General Inquiry</label>
+                            <label><input type="radio" name="purpose" value="reservation"> Reservation Question</label>
+                            <label><input type="radio" name="purpose" value="suggestion"> Website Suggestion</label>
+                        </fieldset>
+
+                        <label for="message">Your Message:</label>
+                        <textarea id="message" name="message" rows="5" required></textarea>
+
+                        <label>
+                            <input type="checkbox" name="subscribe"> Please subscribe me to the monthly newsletter
+                        </label>
+
+                        <button type="submit">Send Message</button>
+                    </form>
                 </div>
-            </section>
+            </div>
+        </section>
 
-            <!-- Contact Form -->
-            <section class="contact-form">
-                <h2>Send Us a Message</h2>
-                <form action="#" method="post">
-                    <label for="name">Full Name:</label>
-                    <input type="text" id="name" name="name" required>
+        <!-- Employee Profiles -->
+        <section class="team">
+            <h2>Meet Our Team</h2>
+            <div class="employee-gallery">
+                <figure>
+                    <img src="images/employee1.jpg" alt="Naison - Lead Guide">
+                    <figcaption>Naison Mutongoreya<br><em>Lead Guide</em></figcaption>
+                </figure>
+                <figure>
+                    <img src="images/employee2.jpg" alt="Millicent - Safety Officer">
+                    <figcaption>Millicent Chironde<br><em>Safety Officer</em></figcaption>
+                </figure>
+                <figure>
+                    <img src="images/employee3.jpg" alt="Bruce - Tour Manager">
+                    <figcaption>Bruce Muteve<br><em>Tour Manager</em></figcaption>
+                </figure>
+            </div>
+        </section>
+    </main>
 
-                    <label for="email">Email Address:</label>
-                    <input type="email" id="email" name="email" required>
-
-                    <fieldset>
-                        <legend>Purpose of Message:</legend>
-                        <label><input type="radio" name="purpose" value="general" required> General Inquiry</label>
-                        <label><input type="radio" name="purpose" value="reservation"> Reservation Question</label>
-                        <label><input type="radio" name="purpose" value="suggestion"> Website Suggestion</label>
-                    </fieldset>
-
-                    <label for="message">Your Message:</label>
-                    <textarea id="message" name="message" rows="5" required></textarea>
-
-                    <label>
-                        <input type="checkbox" name="subscribe"> Please subscribe me to the monthly newsletter
-                    </label>
-
-                    <button type="submit">Send Message</button>
-                </form>
-            </section>
-        </main>
-
-        <footer>
-            <p>&copy; 2025 White Water Rafting Adventures | Naison Mutongoreya</p>
-            <nav class="socialmedia">
-                <a href="https://facebook.com"><img src="images/facebook.png" alt="Facebook" width="32"></a>
-                <a href="https://twitter.com"><img src="images/twitter.png" alt="Twitter" width="32"></a>
-                <a href="https://instagram.com"><img src="images/instagram.jpeg" alt="Instagram" width="32"></a>
-            </nav>
-        </footer>
+    <footer>
+        <p>&copy; 2025 White Water Rafting Adventures | Naison Mutongoreya</p>
+        <nav class="socialmedia">
+            <a href="https://facebook.com"><img src="images/facebook.png" alt="Facebook" width="32"></a>
+            <a href="https://twitter.com"><img src="images/twitter.png" alt="Twitter" width="32"></a>
+            <a href="https://instagram.com"><img src="images/instagram.jpeg" alt="Instagram" width="32"></a>
+        </nav>
+    </footer>
 
 </body>
 
