--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -26,22 +26,23 @@
     <main>
         <h1>Contact Us</h1>
 
-        <!-- Company Info and Map/Form Side by Side -->
+        <!-- Company Information -->
         <section class="company-info">
             <h2>Our Office</h2>
             <p><strong>Address:</strong> 45 Riverbend Road, Victoria Falls, Zimbabwe</p>
             <p><strong>Phone:</strong> +263 78 158 6218 / +263 77 910 7812</p>
             <p><strong>Email:</strong> info@whitewaterrafting.com</p>
 
-            <div class="contact-section">
-                <!-- Google Map (LEFT) -->
+            <!-- Map + Contact Form Section -->
+            <div class="map-contact">
+                <!-- Map -->
                 <div class="map">
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3623.711727340522!2d25.8462!3d-17.9243!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1930a7cbdf09e6ef%3A0x9c86f64b2d7d6b8e!2sVictoria%20Falls!5e0!3m2!1sen!2szw!4v1693929393097!5m2!1sen!2szw"
                         allowfullscreen="" loading="lazy"></iframe>
                 </div>
 
-                <!-- Contact Form (RIGHT) -->
+                <!-- Contact Form -->
                 <div class="contact-form">
                     <h3>Send Us a Message</h3>
                     <form>
@@ -71,21 +72,21 @@
             </div>
         </section>
 
-        <!-- Employee Profiles -->
+        <!-- Employee Section -->
         <section class="team">
             <h2>Meet Our Team</h2>
             <div class="employee-gallery">
                 <figure>
                     <img src="images/employee1.jpg" alt="Naison - Lead Guide">
-                    <figcaption>Naison Mutongoreya<br><em>Lead Guide</em></figcaption>
+                    <figcaption>Naison Mutongoreya<br>Lead Guide</figcaption>
                 </figure>
                 <figure>
                     <img src="images/employee2.jpg" alt="Millicent - Safety Officer">
-                    <figcaption>Millicent Chironde<br><em>Safety Officer</em></figcaption>
+                    <figcaption>Millicent Chironde<br>Safety Officer</figcaption>
                 </figure>
                 <figure>
                     <img src="images/employee3.jpg" alt="Bruce - Tour Manager">
-                    <figcaption>Bruce Muteve<br><em>Tour Manager</em></figcaption>
+                    <figcaption>Bruce Muteve<br>Tour Manager</figcaption>
                 </figure>
             </div>
         </section>
