--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -45,40 +45,47 @@
                 <!-- Contact Form -->
                 <div class="contact-form">
                     <h3>Send Us a Message</h3>
-                    <label for="fullname">Full Name:</label>
-                    <input type="text" id="fullname" name="fullname" required>
+                    <form id="contactForm" action="submit_form.php" method="post">
+                        <label for="fullname">Full Name:</label>
+                        <input type="text" id="fullname" name="fullname" required>
 
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" required>
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" name="email" required>
 
-                    <fieldset>
-                        <legend>Purpose of Message:</legend>
-                        <label for="purpose-general">
-                            <input type="radio" id="purpose-general" name="purpose" value="general" required> General
-                            Inquiry
+                        <fieldset>
+                            <legend>Purpose of Message:</legend>
+
+                            <label for="purpose-general">
+                                <input type="radio" id="purpose-general" name="purpose" value="general" required>
+                                General Inquiry
+                            </label>
+
+                            <label for="purpose-reservation">
+                                <input type="radio" id="purpose-reservation" name="purpose" value="reservation">
+                                Reservation Question
+                            </label>
+
+                            <label for="purpose-suggestion">
+                                <input type="radio" id="purpose-suggestion" name="purpose" value="suggestion">
+                                Website Suggestion
+                            </label>
+                        </fieldset>
+
+                        <label for="message">Your Message:</label>
+                        <textarea id="message" name="message" rows="5" required></textarea>
+
+                        <label for="subscribe">
+                            <input type="checkbox" id="subscribe" name="subscribe">
+                            Please subscribe me to the monthly newsletter
                         </label>
-                        <label for="purpose-reservation">
-                            <input type="radio" id="purpose-reservation" name="purpose" value="reservation"> Reservation
-                            Question
-                        </label>
-                        <label for="purpose-suggestion">
-                            <input type="radio" id="purpose-suggestion" name="purpose" value="suggestion"> Website
-                            Suggestion
-                        </label>
-                    </fieldset>
 
-                    <label for="message">Your Message:</label>
-                    <textarea id="message" name="message" rows="5" required></textarea>
-
-                    <label for="subscribe">
-                        <input type="checkbox" id="subscribe" name="subscribe"> Please subscribe me to the monthly
-                        newsletter
-                    </label>
-
-                    <button type="submit">Send Message</button>
+                        <button type="submit">Send Message</button>
                     </form>
-
                 </div>
+
+                </form>
+
+            </div>
             </div>
         </section>
 
