--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -24,7 +24,7 @@
         </nav>
     </header>
     <main>
-        <h1>Contact Us</h1>
+        <h1>White Water Rafting Company</h1>
 
         <!-- Company Information -->
         <section class="company-info">
