--- a/wwr/index.html
+++ b/wwr/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="description" content="Experience thrilling white water rafting adventures with professional guides. Join us for fun, safety, and unforgettable moments!">
+  <meta name="description"
+    content="Experience thrilling white water rafting adventures with professional guides. Join us for fun, safety, and unforgettable moments!">
   <meta name="author" content="Naison Mutongoreya">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>White Water Rafting | Home</title>
@@ -15,7 +16,7 @@
     <img src="images/logo.jpg" alt="Rafting Company Logo" width="120">
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html" class="active">Home</a></li>
         <li><a href="about.html">About Us</a></li>
         <li><a href="trips.html">Trips</a></li>
         <li><a href="contact.html">Contact</a></li>
@@ -33,7 +34,9 @@
     <!-- Welcome Section -->
     <section class="welcome">
       <h2>Welcome to the Ultimate Rafting Experience</h2>
-      <p>At White Water Rafting Adventures, we bring the thrill of nature's wild rivers to life. Whether you're a beginner or a pro, our guided trips are designed for unforgettable memories, team spirit, and pure excitement.</p>
+      <p>At White Water Rafting Adventures, we bring the thrill of nature's wild rivers to life. Whether you're a
+        beginner or a pro, our guided trips are designed for unforgettable memories, team spirit, and pure excitement.
+      </p>
     </section>
 
     <!-- Grid Section -->
@@ -81,4 +84,5 @@
     </nav>
   </footer>
 </body>
+
 </html>
