--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -1,10 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="UTF-8">
-  <meta name="description" content="Explore our thrilling white water rafting trips and adventures for all skill levels.">
+  <meta name="description"
+    content="Explore our thrilling white water rafting trips and adventures for all skill levels.">
   <meta name="author" content="Naison Mutongoreya">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>White Water Rafting | Trips</title>
@@ -18,7 +18,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About Us</a></li>
-        <li><a href="trips.html">Trips</a></li>
+        <li><a href="trips.html" class="active">Trips</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
@@ -104,4 +104,5 @@
     </nav>
   </footer>
 </body>
+
 </html>
