update on the images

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -105,6 +105,10 @@
                     <img src="images/employee3.jpg" alt="Bruce - Tour Manager">
                     <figcaption>Bruce Muteve<br>Tour Manager</figcaption>
                 </figure>
+                <figure>
+                    <img src="images/employee4.jpg" alt="Chibaba - Lasher">
+                    <figcaption>Chibaba Chareka<br>Lasher</figcaption>
+                </figure>
             </div>
         </section>
     </main>
